--- a/web/index.html
+++ b/web/index.html
@@ -73,6 +73,8 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+
+<!--  <script src="https://www.google.com/recaptcha/api.js?render=6LcAWWgpAAAAAGif1NuIexctX-DBevZGz7C7fBjq"></script>-->
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
