--- a/web/index.html
+++ b/web/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--
+      If you are serving your web app in a path other than the root, change the
+      href value below to reflect the base path you are serving from.
 
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
+      The path provided below has to start and end with a slash "/" in order for
+      it to work correctly.
 
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+      For more details:
+      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="/">
+      This is a placeholder for base href that will be replaced by the value of
+      the `--base-href` argument provided to `flutter build`.
+    -->
+    <base href="/">
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Erick Namukolo is a passionate Software Engineer & UI/UX Designer based in Lusaka, Zambia.">
-  <meta name="keywords" content="Erick Namukolo, Erick, Namukolo, chunhthanhde, erick namukolo, Software Engineers in zambia, zambian software engineers, chunhthanhde.com, chunhthanhde.github.io">
-  <meta name="author" content="Erick Namukolo">
+    <meta charset="UTF-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="description"
+          content="Erick Namukolo is a passionate Software Engineer & UI/UX Designer based in Lusaka, Zambia.">
+    <meta name="keywords"
+          content="Erick Namukolo, Erick, Namukolo, chunhthanhde, erick namukolo, Software Engineers in zambia, zambian software engineers, chunhthanhde.com, chunhthanhde.github.io">
+    <meta name="author" content="Erick Namukolo">
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="profile">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="profile">
+    <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>Software Engineer | Software Developer</title>
-  <link rel="manifest" href="manifest.json">
-  <style>
+    <title>Software Engineer | Software Developer</title>
+    <link rel="manifest" href="manifest.json">
+    <style>
     .container {
       width: 100vw;
       height: 100vh;
@@ -42,18 +44,19 @@
     .indicator{
       width: 16vw;
     }
-</style>
+
+    </style>
 </head>
 <body style="overflow: hidden">
-  <div id="loading_indicator" class="container">
+<div id="loading_indicator" class="container">
     <img class="indicator" src="./assets/loading.gif" alt="loading"/>
-  </div>
+</div>
 
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
-  <script>
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
+<script>
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
@@ -69,13 +72,14 @@
   
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-  </script>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
 
-<!--  <script src="https://www.google.com/recaptcha/api.js?render=6LcAWWgpAAAAAGif1NuIexctX-DBevZGz7C7fBjq"></script>-->
-  <script>
+</script>
+<!-- This script installs service_worker.js to provide PWA functionality to
+     application. For more information, see:
+     https://developers.google.com/web/fundamentals/primers/service-workers -->
+
+  <script src="https://www.google.com/recaptcha/api.js?render=6LcAWWgpAAAAAGif1NuIexctX-DBevZGz7C7fBjq"></script>
+<script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
     function loadMainDartJs() {
@@ -138,8 +142,9 @@
       // Service workers not supported. Just drop the <script> tag.
       loadMainDartJs();
     }
-  </script>
-  <script>
+
+</script>
+<script>
   window.onload = function () {
     setTimeout(function () {
       var loadingIndicator = document.getElementById("loading_indicator");
@@ -148,6 +153,7 @@
       }
     }, 10000);
 };
-  </script>
+
+</script>
 </body>
 </html>
