--- a/web/index.html
+++ b/web/index.html
@@ -22,8 +22,8 @@
     <meta name="description"
           content="Erick Namukolo is a passionate Software Engineer & UI/UX Designer based in Lusaka, Zambia.">
     <meta name="keywords"
-          content="Erick Namukolo, Erick, Namukolo, chunhthanhde, erick namukolo, Software Engineers in zambia, zambian software engineers, chunhthanhde.com, chunhthanhde.github.io">
-    <meta name="author" content="Erick Namukolo">
+          content="Chung Nguyen Thanh, Erick, Nguyen Thanh Chung, chunhthanhde,, ChunhThanhDe Software Engineers in VietNam, chunhthanhde.github.io">
+    <meta name="author" content="ChunhThanhDe">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
