update UI Tablet and app_bar_lang button

--- a/web/index.html
+++ b/web/index.html
@@ -79,7 +79,7 @@
      application. For more information, see:
      https://developers.google.com/web/fundamentals/primers/service-workers -->
 
-  <script src="https://www.google.com/recaptcha/api.js?render=6LcAWWgpAAAAAGif1NuIexctX-DBevZGz7C7fBjq"></script>
+<!--  <script src="https://www.google.com/recaptcha/api.js?render=6LcAWWgpAAAAAGif1NuIexctX-DBevZGz7C7fBjq"></script>-->
 <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
