--- a/web/index.html
+++ b/web/index.html
@@ -21,19 +21,19 @@
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="description"
-          content="Erick Namukolo is a passionate Software Engineer & UI/UX Designer based in Lusaka, Zambia.">
+          content="ChunhThanhDe is a passionate Software Engineer & Flutter Developer based in HaNoi, VietNam.">
     <meta name="keywords"
-          content="Chung Nguyen Thanh, Erick, Nguyen Thanh Chung, chunhthanhde,, ChunhThanhDe Software Engineers in VietNam, chunhthanhde.github.io">
+          content="Nguyển Thành Chung. Chung Nguyen Thanh, Nguyen Thanh Chung, ChunhThanhDe, ChunhThanhDe Software Engineers in VietNam, chunhthanhde.github.io">
     <meta name="author" content="ChunhThanhDe">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="profile">
-    <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <link rel="apple-touch-icon" href="assets/icons/Icon-192.png">
 
     <title>Software Engineer | Software Developer</title>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="web/manifest.json">
     <style>
     .container {
       width: 100vw;
