update loading, update contact card, update texts

--- a/web/index.html
+++ b/web/index.html
@@ -49,6 +49,8 @@
     </style>
 </head>
 <body style="overflow: hidden">
+
+</div>
 <div id="loading_indicator" class="container">
     <img class="indicator" src="./assets/loading.gif" alt="loading"/>
 </div>
