maser: update type project model UI, update translate, media screenshots

--- a/web/index.html
+++ b/web/index.html
@@ -32,8 +32,8 @@
     <meta name="apple-mobile-web-app-title" content="profile">
     <link rel="apple-touch-icon" href="assets/icons/Icon-192.png">
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="assets/avatar.png" />
+    <!-- avatar -->
+    <link rel="shortcut icon" type="image/png" href="assets/icons/avatar.png" />
 
     <title>Software Engineer | Software Developer</title>
     <link rel="manifest" href="web/manifest.json">
