--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="profile">
-    <link rel="apple-touch-icon" href="assets/icons/Icon-192.png">
+    <link rel="apple-touch-icon" href="assets/icons/avatar.png">
 
     <!-- avatar -->
     <link rel="shortcut icon" type="image/png" href="assets/icons/avatar.png" />
@@ -53,7 +53,7 @@
 </head>
 <body style="overflow: hidden">
 <div id="loading_indicator" class="container">
-    <img class="indicator" src="./assets/loading.gif" alt="loading"/>
+    <img class="indicator" src="web/assets/loading.gif" alt="loading"/>
 </div>
 
 <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
