--- a/web/index.html
+++ b/web/index.html
@@ -30,10 +30,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="profile">
-    <link rel="apple-touch-icon" href="assets/icons/avatar.png">
+    <link rel="apple-touch-icon" href="web/assets/icons/avatar.png">
 
     <!-- avatar -->
-    <link rel="shortcut icon" type="image/png" href="assets/icons/avatar.png" />
+    <link rel="shortcut icon" type="image/png" href="web/assets/icons/avatar.png" />
 
     <title>Software Engineer | Software Developer</title>
     <link rel="manifest" href="web/manifest.json">
