maser: update deploy web flutter

--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
     <link rel="apple-touch-icon" href="./assets/icons/avatar.png">
 
     <!-- avatar -->
-    <link rel="shortcut icon" type="image/png" href="./assets/icons/avatar.png" />
+    <link rel="shortcut icon" type="image/png" href="./assets/avatar.png" />
 
     <title>Software Engineer | Software Developer</title>
     <link rel="manifest" href="./assets/manifest.json">
