maser: update button change lang

--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
     <!-- avatar -->
     <link rel="shortcut icon" type="image/png" href="./assets/avatar.png" />
 
-    <title>Software Engineer | Software Developer</title>
+    <title> ChunhThanhDe says Hi 🤟 </title>
     <link rel="manifest" href="./assets/manifest.json">
     <style>
     .container {
