--- a/web/index.html
+++ b/web/index.html
@@ -48,6 +48,20 @@
     .indicator{
       width: 16vw;
     }
+
+    /* Điều kiện: Màn hình điện thoại */
+    @media (max-width: 600px) {
+        .indicator {
+            width: 32vw;
+        }
+    }
+
+    /* Điều kiện: Màn hình máy tính ngang */
+    @media (min-width: 601px) {
+        .indicator {
+            width: 16vw;
+        }
+    }
     </style>
 
 </head>
